<resources>
    <string name="app_name">P6HPA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_del_juego">Logo del juego</string>
    <string name="nombre">Nombre</string>
    <string name="empezar_juego">EMPEZAR JUEGO</string>
    <string name="pulsador_amarillo">Pulsador amarillo</string>
    <string name="pulsadur_azul">Pulsadur azul</string>
    <string name="pulsador_rojo">Pulsador rojo</string>
    <string name="pulsador_verde">Pulsador verde</string>
    <string name="instrucciones">INSTRUCCIONES</string>
    <string name="jugar_de_nuevo">JUGAR DE NUEVO</string>
    <string name="salir">SALIR</string>
    <string name="diario">DIARIO</string>
    <string name="general">GENERAL</string>
    <string name="semanal">SEMANAL</string>
    <string name="clasificaci_n">CLASIFICACIÓN</string>
    <string name="scrollview_de_las_distintas_clasificaciones">ScrollView de las distintas clasificaciones</string>
    <string name="texto_del_ranking_de_jugadores_filtrado">Texto del ranking de jugadores filtrado</string>
    <string name="pulsemaster_vs">PulseMaster vs %1$s</string>
    <string name="empieza_pulsemaster_buena_suerte">Empieza PulseMaster, buena suerte...</string>
    <string name="aceptar">Aceptar</string>
    <string name="ronda_texto">RONDA: %1$d</string>
    <string name="has_fallado">¡Has fallado!</string>
    <string name="hasta_aqu_ha_llegado_tu_aventura">Hasta aquí ha llegado tu aventura..</string>
    <string name="continuar">Continuar</string>
    <string name="puntuaci_n">PUNTUACIÓN: %1$d</string>
    <string name="introduce_un_nombre">Introduce un nombre de más de 3 carácteres.</string>
    <string name="daniel">Daniel</string>
    <string name="miguel">Miguel</string>
    <string name="hector">Hector</string>
    <string name="jesus">Jesus</string>
    <string name="ivan">Ivan</string>
    <string name="url_reglas">https://es.wikipedia.org/wiki/Simon_(juego)</string>
    <string name="posicion_usuario">%1$s, estás en la posición %2$d</string>
    <string name="juego_reiniciado">Juego Reiniciado</string>
    <string name="has_salido_de_la_aplicaci_n_empiezas_de_cero">Has salido de la aplicación, empiezas de cero.</string>
</resources>