<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clasificacion">

    <VideoView
        android:id="@+id/videoView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textoClasificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/clasificaci_n"
        android:textColor="#54E6D3"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/botonReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#54E6D3"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/jugar_de_nuevo"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#54E6D3"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/salir"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/botonReiniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/general"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borde"
            android:clickable="true"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/general"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/diario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borde"
            android:clickable="true"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/diario"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/semanal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borde"
            android:clickable="true"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/semanal"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_" />

</androidx.constraintlayout.widget.ConstraintLayout>